antsurance/force-app/main/default/objects/Antsurance_AI_Setting__mdt/Antsurance_AI_Setting__mdt.object-meta.xml
<CustomObject>
    <description>How this org talks to Claude: which model, and whether to ask for fast output. Change the Default record in Setup to use a model your Anthropic account has; no code changes.</description>
    <label>Antsurance AI Setting</label>
    <pluralLabel>Antsurance AI Settings</pluralLabel>
</CustomObject>