antsurance/force-app/main/default/objects/Antsurance_AI_Setting__mdt/fields/Chat_Model_Class__c.field-meta.xml
<CustomField>
    <fullName>Chat_Model_Class__c</fullName>
    <description>The Apex class that tells the Ask Claude chat about this org's own records: a class that extends AntsuranceClaudeModel. Leave empty to use the one that ships with the app.</description>
    <inlineHelpText>The name of an Apex class that extends AntsuranceClaudeModel. Empty means the built-in one.</inlineHelpText>
    <label>Chat Model Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>