antsurance/force-app/main/default/objects/Antsurance_AI_Setting__mdt/fields/Fast_Mode__c.field-meta.xml
<CustomField>
    <fullName>Fast_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ask for faster output from the same model, at a higher price. Only some models and accounts have it. When it is off, or the API refuses it, requests go at standard speed.</description>
    <inlineHelpText>Faster answers at a higher price. Turn off if your Anthropic account does not have fast mode.</inlineHelpText>
    <label>Fast Mode</label>
    <type>Checkbox</type>
</CustomField>