antsurance/force-app/main/default/objects/Antsurance_AI_Setting__mdt/fields/Fast_Mode_Beta__c.field-meta.xml
<CustomField>
    <fullName>Fast_Mode_Beta__c</fullName>
    <description>The beta header value that turns fast mode on. Only read when Fast Mode is ticked. Leave empty to use the one built in.</description>
    <label>Fast Mode Beta Header</label>
    <length>80</length>
    <type>Text</type>
</CustomField>