antsurance/force-app/main/default/objects/Antsurance_AI_Setting__mdt/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>The Claude model id sent with every request, for example claude-opus-5-5. Leave empty to use the one built in.</description>
    <inlineHelpText>The Claude model id, exactly as the Anthropic API names it.</inlineHelpText>
    <label>Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>